--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
     "@studio-freight/lenis": "^1.0.42",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "framer-motion": "^12.4.10",
     "lenis": "^1.1.22",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
